auto-load blendmap brushes using loopfiles, improve text output for blendmap operations
Former-commit-id: d5595944fb24f0a9fabb6e526fd652344d101243

--- a/data/brush.cfg
+++ b/data/brush.cfg
@@ -140,45 +140,4 @@ newbrush "Noise 25x25 Brush" 12 12 [
 do [ brush_2 ] // 421
 
 //blendmap brushes; not heightmap related, but whatever :P
-
-//default blend brushes
-addblendbrush brush_32_hard brushes/brush_32_hard.png
-addblendbrush brush_32_soft brushes/brush_32_soft.png
-addblendbrush brush_64_hard brushes/brush_64_hard.png
-addblendbrush brush_64_soft brushes/brush_64_soft.png
-//shapes
-addblendbrush star_32_hard brushes/star_32_hard.png
-addblendbrush star_32_soft brushes/star_32_soft.png
-addblendbrush star_64_hard brushes/star_64_hard.png
-addblendbrush star_64_soft brushes/star_64_soft.png
-
-addblendbrush triangle_32_hard brushes/triangle_32_hard.png
-addblendbrush triangle_32_soft brushes/triangle_32_soft.png
-addblendbrush triangle_64_hard brushes/triangle_64_hard.png
-addblendbrush triangle_64_soft brushes/triangle_64_soft.png
-
-//big landscape shatters
-addblendbrush crack1 brushes/cracks1.png
-addblendbrush crack2 brushes/cracks2.png
-addblendbrush crack3 brushes/cracks3.png
-addblendbrush crack4 brushes/cracks4.png
-
-//big landscape holes
-addblendbrush hole1 brushes/hole1.png
-addblendbrush hole2 brushes/hole2.png
-
-//small, hard pixel brushes
-addblendbrush p1 brushes/p1.png
-addblendbrush p2 brushes/p2.png
-addblendbrush p3 brushes/p3.png
-addblendbrush p4 brushes/p4.png
-addblendbrush p5 brushes/p5.png
-addblendbrush p6 brushes/p6.png
-addblendbrush p7 brushes/p7.png
-
-//big landscape splats
-addblendbrush splat1 brushes/splat1.png
-addblendbrush splat2 brushes/splat2.png
-addblendbrush splat3 brushes/splat3.png
-addblendbrush splat4 brushes/splat4.png
-
+loopfiles curbrush brushes png [ addblendbrush $curbrush (concatword "brushes/" $curbrush ".png") ]
