--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -57,7 +57,7 @@ delta_game_0 		= [ if (iszooming) [ setzoom $arg1 ] [ weapon -1 $arg1 ] ]; setco
 delta_edit_0		= [
 	if $blendpaintmode [
 		nextblendbrush $arg1
-		echo (getblendbrushname (curblendbrush))
+		echo (concatword "^fgblend brush:^fw " (getblendbrushname (curblendbrush)))
 	] [
 		editfacewentpush $arg1 1
 	]
@@ -235,7 +235,7 @@ paintmodes = ["off" "overwrite blendmap" "merge blendmap" "max opacity to brush'
 editbind P [
 	hmapedit 0;
 	blendpaintmode (if (= $blendpaintmode 5) 0 (+ $blendpaintmode 1));
-	echo (at $paintmodes $blendpaintmode)
+	echo (concatword "^fgblend mode:^fw " (at $paintmodes $blendpaintmode))
 ]
 editbindvar B		fullbright
 
