restructure game menu so scrolling slider is right aligned in a sensible manner
Former-commit-id: 458901f6360ac43cc83e949ba105ebe096975c10

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -228,13 +228,12 @@ newgui game [
 			guistrut 1
 			guilist [
 				guititle "maps"
-				
 				guilist [
 					nummaps = (listlen $maplist)
 					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
 					mapnum = (min $mapnum $nummaps)
-					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 					guilist [
+						guilist [ guistrut 28 ]
 						loop i $nummaps [
 							if (&& (>= $i $mapindex) (< (- $i $mapindex) $maplistsize)) [
 								curmap = (at $maplist $i)
@@ -244,31 +243,26 @@ newgui game [
 										mapextraval = $mapextra
 										guifield mapextraval 24 [mapextra = $mapextraval]
 									]
-								] [
-									guilist [
-										guiradio $curmap mapnum $i
-										len = (- 24 (strlen $curmap))
-										if (> $len 0) [ guistrut $len ]
-									]
-								]
+								] [ guiradio $curmap mapnum $i ]
 							]
 						]
 					]
+					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 				]
-				if (> $hasoctapaks 0) [
-					guilist [
-						guistrut 2
-						guibutton (format "%1show sauerbraten maps" $violet) [
-							if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
-							showngamegui = 0
-						] (? (> $mapocta 0) "checkboxon" "checkbox")
-					]
-				] [ guistrut 1 ]
+				guistrut 1
 				guilist [ 
-					guistrut 2
 					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) "action" 
-					guistrut 2
+					guistrut 1
 					guibutton (format "%1close" $red) [cleargui 1] "exit" 
+					if (> $hasoctapaks 0) [
+						guistrut 2
+						guilist [
+							guibutton (format "%1sauer maps" $violet) [
+								if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
+								showngamegui = 0
+							] (? (> $mapocta 0) "checkboxon" "checkbox")
+						]
+					]
 				] 
 			]
 		]
@@ -303,34 +297,34 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					varfld selfdamage 8
-					varfld teamdamage 8
-					varfld maxhealth 8
-					varfld overctfhealth 8
-					varfld overstfhealth 8
-					varfld maxcarry 8
-					varfld regenhealth 8
-					varfld regenctfguard 8
-					varfld regenstfguard 8
-					varfld regenctfflag 8
-					varfld regenstfflag 8
-					varfld itemsallowed 8
-					varfld itemdropping 8
-					varfld kamikaze 8
-					varfld fraglimit 8
-					varfld ctflimit 8
-					varfld stflimit 8
-					varfld stffinish 8
+					varfld selfdamage 12
+					varfld teamdamage 12
+					varfld maxhealth 12
+					varfld overctfhealth 12
+					varfld overstfhealth 12
+					varfld maxcarry 12
+					varfld regenhealth 12
+					varfld regenctfguard 12
+					varfld regenstfguard 12
+					varfld regenctfflag 12
+					varfld regenstfflag 12
+					varfld itemsallowed 12
+					varfld itemdropping 12
+					varfld kamikaze 12
+					varfld fraglimit 12
+					varfld ctflimit 12
+					varfld stflimit 12
+					varfld stffinish 12
 					guilist [
-						guilist [ varfld spawnweapon 3 ]
+						guilist [ varfld spawnweapon 7 ]
 						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
 					]
 					guilist [
-						guilist [ varfld instaspawnweapon 3 ]
+						guilist [ varfld instaspawnweapon 7 ]
 						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
 					]
-					varfld maprotate 8
-					varfld spawnrotate 8
+					varfld maprotate 12
+					varfld spawnrotate 12
 				]
 			]
 		]
@@ -361,26 +355,26 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					varfld damagescale 8
-					varfld gravityscale 8
-					varfld jumpscale 8
-					varfld speedscale 8
-					varfld hitpushscale 8
-					varfld deadpushscale 8
-					varfld wavepushscale 8
-					varfld scoringstyle 8
-					varfld timelimit 8
-					varfld intermlimit 8
-					varfld votelimit 8
-					varfld itemspawntime 8
-					varfld regendelay 8
-					varfld regentime 8
-					varfld spawnprotecttime 8
-					varfld spawndelay 8
-					varfld ctfspawndelay 8
-					varfld stfspawndelay 8
-					varfld instaspawnscale 8
-					varfld paintspawnscale 8
+					varfld damagescale 12
+					varfld gravityscale 12
+					varfld jumpscale 12
+					varfld speedscale 12
+					varfld hitpushscale 12
+					varfld deadpushscale 12
+					varfld wavepushscale 12
+					varfld scoringstyle 12
+					varfld timelimit 12
+					varfld intermlimit 12
+					varfld votelimit 12
+					varfld itemspawntime 12
+					varfld regendelay 12
+					varfld regentime 12
+					varfld spawnprotecttime 12
+					varfld spawndelay 12
+					varfld ctfspawndelay 12
+					varfld stfspawndelay 12
+					varfld instaspawnscale 12
+					varfld paintspawnscale 12
 				]
 			]
 			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
