shifted some binds around so crouch could be mapped to 'C'
Former-commit-id: b377cf2a4ebc4c4abd84cc90eb806ba5c61e317b

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -98,11 +98,12 @@ bind I				[ taunt ]
 bind E				[ action ]
 bind R				[ reload ]
 bind F				[ action ]
-bind C				[ drop ]
+bind Z				[ drop ]
 bind X				[ dropflag ]
+bind C				[ crouch ]
+bind V				[ zoom ]
 bind G				[ weapon 6 ]
 bind Q				[ weapon 6 ]
-bind Z				[ zoom ]
 bind K				[ kill ]
 
 bind TAB			[ showscores ]
