--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -10,10 +10,9 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
-// cloudblend 1.0
+// cloudblend 0.75
 // cloudbox "<mad:0.2/0.2/0.4>acord/sky3"
-// cloudclip 0.0
+// cloudclip 0.51
 // cloudcolour 0xFFFFFF
 // cloudfade 0.1
 // cloudheight 0.01
@@ -22,7 +21,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,10 +34,9 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-gravity 50
-impulsemod 60
-impulsespeed 30
+// gravity 50.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -51,17 +49,15 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 32
-// liquiddampen 0.5
 // liquidfric 10.0
-// liquidscale 0.9
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Eight by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-movespeed 40
-numplayers 4
-// numteamplayers 4
+// movespeed 40.0
+// numplayers 4
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
