altitude skybox by windecker, s/skyboxes/env/
Former-commit-id: ade6e9c36c186180a75819b3143de4392d1dd94e

--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -62,7 +62,7 @@
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-// skybox "skyboxes/stars"
+skybox "env/stars"
 // skylight 0x222288
 // skytexture 1
 // slopez 0.5
