--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -67,7 +67,7 @@ numplayers 8
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-// skybox "skyboxes/black"
+skybox "env/black"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
