--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -11,7 +11,7 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudblend 0.75
-// cloudbox "<mad:1/0/0>skyboxes/gradient"
+cloudbox "<mad:1/0/0>env/gradient"
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
@@ -62,7 +62,7 @@
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 3.0
-// skybox "skyboxes/stars"
+skybox "env/stars"
 // skylight 0x331111
 // skytexture 1
 // slopez 0.5
