--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -63,7 +63,7 @@
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-// skybox "skyboxes/yellow"
+skybox "env/yellow"
 // skylight 0xFFC975
 // skytexture 1
 // slopez 0.5
