--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -62,7 +62,7 @@
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-// skybox "skyboxes/grey"
+skybox "env/grey"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
