--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -11,7 +11,7 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudblend 0.09
-// cloudbox "<mad:0.5/0.75/1.0>skyboxes/gradient"
+cloudbox "<mad:0.5/0.75/1.0>env/gradient"
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
@@ -59,7 +59,7 @@ numplayers 8
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-// skybox "skyboxes/stars"
+skybox "env/stars"
 // skylight 0x112233
 // skytexture 1
 // slopez 0.5
