tweaked dualstar physics
Former-commit-id: eabbfbbfa9e5a27708b07471dd9185f16670de91

--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -10,7 +10,6 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
@@ -22,7 +21,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,12 +34,11 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-gravity 50
-impulsemod 60
-impulsespeed 30
+// gravity 70.0
+// impulsemod 60.0
+// impulsespeed 20.0
 // impulsetime 0
-// jumpspeed 50.0
+// jumpspeed 40.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
@@ -51,29 +49,27 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 128
-// liquiddampen 0.5
 // liquidfric 10.0
-// liquidscale 0.9
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-maptitle "DualStar by Jonathan 'W!CK3D' Roels"
+// maptitle "DualStar by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
-movespeed 40
-numplayers 12
-// numteamplayers 12
+// movespeed 40.0
+// numplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-skybox "env/black"
+// skybox "env/black"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
 // spincloudlayer 0.0
 // spinclouds 0.0
 // spinsky 0.0
-// stairheight 4.1
+// stairheight 5.0
 // stepspeed 1.0
 // vertwater 1
 // wallz 0.2
