--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -62,7 +62,7 @@
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-// skybox "env/black"
+// skybox "skyboxes/black"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
