--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -62,7 +62,7 @@ cloudbox "<mad:1/0/0>env/gradient"
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 3.0
-skybox "env/stars"
+skybox "skyboxes/stars"
 // skylight 0x331111
 // skytexture 1
 // slopez 0.5
