--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -59,7 +59,7 @@ numplayers 8
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-skybox "env/stars"
+skybox "skyboxes/stars"
 // skylight 0x112233
 // skytexture 1
 // slopez 0.5
