arena mutator, where you select your main weapon
Former-commit-id: a74c1ada525be20fcfebcadfd5fe755137e6704f

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -21,6 +21,8 @@ exec "sounds.cfg"
 //		0x0008	Duel
 //		0x0010	Last-Man-Standing
 //		0x0020	Paintball
+//		0x0040	Vampire
+//		0x0080	Arena
 
 mapcomplete			= [ complete $arg1 maps bgz ]
 mapcomplete map
@@ -134,6 +136,8 @@ bind F5				[ setmaster 1 ]
 bindvar F10			[ inputgrab ]
 bind F11			[ toggleconsole ]
 bind F12			[ screenshot "screenshot" ]
+
+bind COMMA  		[ if (& (mutators) 0x0080) [ showgui arena ] [ echo "^fronly available in arena" ] ]
 
 editbind F2			[ showtexgui ]
 editbind F3			[ cleargui; showentgui ]
