--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -119,10 +119,21 @@ newgui name [
 	]
 ]
 
-wepnames = [ "  pistol" " shotgun" "chaingun" "  flamer" "  plasma" "   rifle" "grenades"] //make them all the same size
+wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" " grenade"] //make them all the same size
+
+newgui arena [
+	guititle "select weapon"
+	guibutton "^fwrandom" [arenaweap 0] "action"
+	guibutton "^fyshotgun" [arenaweap 1] "shotgun"
+	guibutton "^fosmg" [arenaweap 2] "smg"
+	guibutton "^frflamer" [arenaweap 3] "flamer"
+	guibutton "^fcplasma" [arenaweap 4] "plasma"
+	guibutton "^fvrifle" [arenaweap 5] "rifle"
+	guibutton "^fggrenades" [arenaweap 6] "grenade"
+]
 
 maplists = [ missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
-maplistsize = 20 //adjust if desired
+maplistsize = 21 //adjust if desired
 mapindex = 0
 maplist = ""
 mapfile = ""
@@ -191,6 +202,7 @@ newgui game [
 						guibitfield "last-man"					mutsselected 0x0010
 						guibitfield "paintball"					mutsselected 0x0020
 						guibitfield "vampire"					mutsselected 0x0040
+						guibitfield "arena"						mutsselected 0x0080
 
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
@@ -381,8 +393,8 @@ newgui game [
 		]
 	] ]
 ] [
-	if (= (gamemode) 1) [ modeselected = 4 ] [ modeselected = (gamemode) ]
-	mutsselected = (mutscheck $modeselected (mutators))
+	if (< (gamemode) 2) [ modeselected = $defaultmode ] [ modeselected = (gamemode) ]
+	if (< (mutators) 0) [ mutsselected = $defaultmuts ] [ mutsselected = (mutscheck $modeselected (mutators)) ]
 	lastmode = -1
 	lastmuts = -1
 	mapnum = 0
