fix remaining bad directory references, only give max ammo to non-reloadables in arena
Former-commit-id: 6b89a8ce39373895e744cf17c4763b70a88103a7

--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -66,7 +66,7 @@ numplayers 6
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 3.0
-skybox "<mad:0.25/0.25/0.25>env/stars"
+skybox "<mad:0.25/0.25/0.25>skyboxes/stars"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
