--- a/data/maps/citadel.cfg
+++ b/data/maps/citadel.cfg
@@ -66,7 +66,7 @@ numplayers 8
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-skybox "<mad:0.5/0.5/0.5>env/stars"
+skybox "<mad:0.5/0.5/0.5>skyboxes/stars"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
