--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -11,7 +11,7 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudblend 0.75
-cloudbox "<mad:1/0/0>env/gradient"
+cloudbox "<mad:1/0/0>skyboxes/gradient"
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
