some more arena improvements and fixes
Former-commit-id: f6f2d571281172d2af07b683c9e41b67e5be6cd0

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -137,7 +137,7 @@ bindvar F10			[ inputgrab ]
 bind F11			[ toggleconsole ]
 bind F12			[ screenshot "screenshot" ]
 
-bind COMMA  		[ if (& (mutators) 0x0080) [ showgui arena ] [ echo "^fronly available in arena" ] ]
+bind COMMA  		[ showgui arena ]
 
 editbind F2			[ showtexgui ]
 editbind F3			[ cleargui; showentgui ]
