--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -115,21 +115,26 @@ newgui name [
 		nameval = (getname)
 		guifield nameval 20 [name $nameval]
 		guistrut 1
-		guibutton (format "%1OK" $green) [cleargui 1] "action"
+		guibutton (format "%1ok" $green) [cleargui 1] "action"
 	]
 ]
 
 wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" " grenade"] //make them all the same size
 
 newgui arena [
-	guititle "select weapon"
-	guibutton "^fwrandom" [arenaweap 0] "action"
-	guibutton "^fyshotgun" [arenaweap 1] "shotgun"
-	guibutton "^fosmg" [arenaweap 2] "smg"
-	guibutton "^frflamer" [arenaweap 3] "flamer"
-	guibutton "^fcplasma" [arenaweap 4] "plasma"
-	guibutton "^fvrifle" [arenaweap 5] "rifle"
-	guibutton "^fggrenades" [arenaweap 6] "grenade"
+	if (& (mutators) 0x0080) [
+		guititle "select weapon"
+		guibutton "^fwrandom" [arenaweap 0] "action"
+		guibutton "^fyshotgun" [arenaweap 1] "shotgun"
+		guibutton "^fosmg" [arenaweap 2] "smg"
+		guibutton "^frflamer" [arenaweap 3] "flamer"
+		guibutton "^fcplasma" [arenaweap 4] "plasma"
+		guibutton "^fvrifle" [arenaweap 5] "rifle"
+		guibutton "^fggrenades" [arenaweap 6] "grenade"
+	] [
+		guitext "^frsorry, this is only available in arena"
+		guibutton "^fgok" [cleargui 1] "action"
+	]
 ]
 
 maplists = [ missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
