--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -57,7 +57,7 @@ maptitle "Hollow by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
 // movespeed 40.0
-// numplayers 8
+numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
