--- a/data/models/actors/player/beta/md5.cfg
+++ b/data/models/actors/player/beta/md5.cfg
@@ -5,7 +5,7 @@ exec "data/models/actors/player/ragdoll.cfg"
 md5tag Weapon tag_weapon
 md5tag waist tag_flag
 
-md5skin mesh "<dds>skin.jpg" "<dds>../mmask.jpg"
+md5skin mesh "<dds>skin.png" "<dds>../mmask.png"
 md5bumpmap mesh "<dds>../mnormal.png"
 
 md5anim "idle" "../idle.md5anim" 1
