--- a/data/models/actors/player/alpha/md5.cfg
+++ b/data/models/actors/player/alpha/md5.cfg
@@ -5,8 +5,8 @@ exec "data/models/actors/player/ragdoll.cfg"
 md5tag Weapon tag_weapon
 md5tag waist tag_flag
 
-md5skin mesh "<dds>skin.jpg" "<dds>../mask.jpg"
-md5bumpmap mesh "<dds>../normals.jpg"
+md5skin mesh "<dds>skin.png" "<dds>../mask.png"
+md5bumpmap mesh "<dds>../normals.png"
 
 md5anim "idle" "../idle.md5anim" 1
 md5anim "dying" "../dying.md5anim" 8
