--- a/data/models/actors/player/beta/vwep/md5.cfg
+++ b/data/models/actors/player/beta/vwep/md5.cfg
@@ -2,8 +2,8 @@ md5load "../../marine_hands.md5mesh" firstplayer
 
 md5tag Weapon tag_weapon
 
-md5skin mesh "<compress:2>../skin.jpg" "<compress:2>../../mask.jpg"
-md5bumpmap mesh "<compress:2>../../normals.jpg"
+md5skin mesh "<compress:2>../skin.png" "<compress:2>../../mask.png"
+md5bumpmap mesh "<compress:2>../../normals.png"
 
 md5pitch "" 1
 
