--- a/data/models/actors/player/vwep/md5.cfg
+++ b/data/models/actors/player/vwep/md5.cfg
@@ -2,8 +2,8 @@ md5load "../trooper_hands.md5mesh" firstplayer
 
 md5tag Weapon tag_weapon
 
-md5skin mesh "<dds>../skin.jpg" "<dds>../mask.jpg"
-md5bumpmap mesh "<dds>../normals.jpg"
+md5skin mesh "<dds>../skin.png" "<dds>../mask.png"
+md5bumpmap mesh "<dds>../normals.png"
 
 md5pitch "" 1
 
