--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -35,19 +35,28 @@ edit				= [ start $arg1 2 0x0000 ]; mapcomplete edit
 mission				= [ start $arg1 3 0x0000 ]; mapcomplete mission
 deathmatch			= [ start $arg1 4 0x0000 ]; mapcomplete deathmatch
 instagib			= [ start $arg1 4 0x0004 ]; mapcomplete instagib
+arena				= [ start $arg1 4 0x0080 ]; mapcomplete arena
 teamdm				= [ start $arg1 4 0x0002 ]; mapcomplete teamdm
+teamarena			= [ start $arg1 4 0x0082 ]; mapcomplete teamarena
 instateamdm			= [ start $arg1 4 0x0006 ]; mapcomplete instateamdm
 multidm				= [ start $arg1 4 0x0003 ]; mapcomplete multidm
+multiarena			= [ start $arg1 4 0x0083 ]; mapcomplete multiarena
 instamultidm		= [ start $arg1 4 0x0007 ]; mapcomplete instamultidm
 stf					= [ start $arg1 5 0x0002 ]; mapcomplete stf
+stfarena			= [ start $arg1 5 0x0082 ]; mapcomplete stfarena
 multistf			= [ start $arg1 5 0x0003 ]; mapcomplete multistf
+multistfarena		= [ start $arg1 5 0x0083 ]; mapcomplete multistfarena
 instastf			= [ start $arg1 5 0x0006 ]; mapcomplete instastf
 ctf					= [ start $arg1 6 0x0002 ]; mapcomplete ctf
+ctfarena			= [ start $arg1 6 0x0082 ]; mapcomplete ctfarena
 multictf			= [ start $arg1 6 0x0003 ]; mapcomplete multictf
+multictfarena		= [ start $arg1 6 0x0083 ]; mapcomplete multictfarena
 instactf			= [ start $arg1 6 0x0006 ]; mapcomplete instactf
 duel				= [ start $arg1 4 0x0008 ]; mapcomplete duel
+duelarena			= [ start $arg1 4 0x0088 ]; mapcomplete duelarena
 instaduel			= [ start $arg1 4 0x000C ]; mapcomplete instaduel
 lms					= [ start $arg1 4 0x0010 ]; mapcomplete lms
+lmsarena			= [ start $arg1 4 0x0090 ]; mapcomplete lmsarena
 instalms			= [ start $arg1 4 0x0014 ]; mapcomplete instalms
 paintball			= [ start $arg1 4 0x0020 ]; mapcomplete paintball
 instapaint			= [ start $arg1 4 0x0024 ]; mapcomplete instapaint
