--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -3,7 +3,7 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x333333
 // blurlms 0
 // blurskylight 0
@@ -25,8 +25,8 @@
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floatcurb 2.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 1000
 // fogcolour 0xCCCCCC
@@ -49,7 +49,7 @@
 // lighterror 5
 // lightlod 0
 // lightprecision 45
-// liquidfric 10.0
+// liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
@@ -61,8 +61,7 @@
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
-skybox "skyboxes/grey"
+// skybox "skyboxes/grey"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
@@ -2760,9 +2759,10 @@ texture z "acord/marsrockz.jpg"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
-texture c "<mad:0.90/1.00/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 0.750000 // 446
+texture c "<mad:1.25/1.50/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 1.0000 // 446
 texture n "mitaman/mm-grassdead42_normal.jpg"
 texture s "mitaman/mm-grassdead42_spec.jpg"
+texlayer 165
 autograss "luckystrike/grass_lucky_green.png"
 
 setshader bumpspecmapparallaxworld
