new sorta glass (needs improvement, but is on its way to looking better), fixed movespeed
Former-commit-id: 4f8d9198346a2626457165ae7617fe02bc633eb0

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -164,6 +164,10 @@ texture 1 "textures/waterfalldudv.jpg"
 texture lava "textures/lava.jpg" 0 0 0 8.000000
 texture 1 "textures/lava.jpg"
 
+texture glass "textures/glass.jpg" 0 0 0 8
+texture 1 "textures/watern.jpg"
+texture 1 "textures/waterdudv.jpg"
+
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 0
 texture n "acord/nfloor1n.jpg"
