--- a/data/map.cfg
+++ b/data/map.cfg
@@ -11,7 +11,11 @@ texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
 texture lava "textures/lava.jpg" 0 0 0 8
-texture 1 "textures/lava.jpg" 0 0 0 8
+texture 1 "textures/lava.jpg"
+
+texture glass "textures/glass.jpg" 0 0 0 8
+texture 1 "textures/watern.jpg"
+texture 1 "textures/waterdudv.jpg"
 
 setshader stdworld
 texture 0 "acord/clouds.jpg"
