--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -94,6 +94,10 @@ texture 1 "textures/waterfalldudv.jpg"
 texture lava "textures/lava.jpg" 0 0 0 8.000000
 texture 1 "textures/lava.jpg"
 
+texture glass "textures/glass.jpg" 0 0 0 8
+texture 1 "textures/watern.jpg"
+texture 1 "textures/waterdudv.jpg"
+
 setshader stdworld
 texture c "acord/clouds.jpg" 0 0 0 1.000000 // 0
 
