--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -76,6 +76,13 @@ texture 1 "textures/waterfall.jpg"
 texture 1 "textures/watern.jpg"
 texture 1 "textures/waterdudv.jpg"
 
+texture lava "textures/lava.jpg" 0 0 0 8.000000
+texture 1 "textures/lava.jpg"
+
+texture glass "textures/glass.jpg" 0 0 0 8
+texture 1 "textures/watern.jpg"
+texture 1 "textures/waterdudv.jpg"
+
 texture lava "mitaman/mm-concreteworn51.jpg" 0 0 0 0.500000
 texture 1 "mitaman/mm-concreteworn51.jpg"
 
