fixed projectile physics and blendmap on path to alpha base in venus
Former-commit-id: 8a1f1a657d6ad6a28662c88d4bbe3207ecb12d3a

--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -25,11 +25,11 @@
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatcurb 2.0
 // floorcurb 5.0
 // floorz 0.867
 // fog 1000
 // fogcolour 0xCCCCCC
+// glasscolour 0x2060F0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassheight 4
@@ -92,7 +92,7 @@ texture 1 "textures/waterfalldudv.jpg"
 texture lava "textures/lava.jpg" 0 0 0 8.000000
 texture 1 "textures/lava.jpg"
 
-texture glass "textures/glass.jpg" 0 0 0 8
+texture glass "textures/glass.jpg" 0 0 0 8.000000
 texture 1 "textures/watern.jpg"
 texture 1 "textures/waterdudv.jpg"
 
@@ -2763,7 +2763,7 @@ texture z "acord/marsrockz.jpg"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
-texture c "<mad:1.25/1.50/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 1.0000 // 446
+texture c "<mad:1.25/1.50/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 1.000000 // 446
 texture n "mitaman/mm-grassdead42_normal.jpg"
 texture s "mitaman/mm-grassdead42_spec.jpg"
 texlayer 165
