--- a/data/stdshader.cfg
+++ b/data/stdshader.cfg
@@ -2706,112 +2706,62 @@ lazyshader 0 "waterfallenv" [
     END
 ]
 
-lazyshader 0 "glassenv" [
-    @vpstart
-    MOV result.texcoord[0], vertex.texcoord[0];
-    SUB result.texcoord[1], program.env[0], vertex.position;
-    
-    TEMP absnormal;
-    ABS absnormal, vertex.normal;
-
-    MOV result.texcoord[2].x, absnormal.y;
-    MOV result.texcoord[2].y, -absnormal.z;
-    MOV result.texcoord[2].z, vertex.normal.x;
-
-    MOV result.texcoord[3].x, absnormal.z;
-    MOV result.texcoord[3].y, -absnormal.x;
-    MOV result.texcoord[3].z, vertex.normal.y;
-
-    MOV result.texcoord[4].x, absnormal.x;
-    MOV result.texcoord[4].y, -absnormal.y;
-    MOV result.texcoord[4].z, vertex.normal.z;
-
-    MOV result.color, vertex.color;
-    @fogcoord
-    END
-] [
-    @fpstart
-    OPTION ARB_fog_linear;
-
-    TEMP diffuse, dudv;
-    TEX diffuse, fragment.texcoord[0], texture[0], 2D;
-    MAD dudv, diffuse, 0.2, fragment.texcoord[0];
-    ADD dudv, dudv, program.env[1];
-    TEX dudv, dudv, texture[2], 2D;
-    MAD dudv, dudv, 0.1, fragment.texcoord[0];
-
-    TEMP normal, wnormal;
-    TEX normal, dudv, texture[1], 2D;
-    MAD normal, normal, 2, -1;
-    DP3 wnormal.x, normal, fragment.texcoord[2];
-    DP3 wnormal.y, normal, fragment.texcoord[3];
-    DP3 wnormal.z, normal, fragment.texcoord[4];
-
-    TEMP cam, rvec, reflect;
-    @(normalize cam fragment.texcoord[1])
-    DP3 rvec, wnormal, cam;
-    MUL rvec, rvec, wnormal;
-    MAD rvec, rvec, 2, -cam;
-    TEX reflect, rvec, texture[3], CUBE;
-    MAD result.color.a, diffuse.r, 1.0, 0.01;
-    LRP result.color.rgb, diffuse, fragment.color, reflect;
-
-    END
-]
-
 lazyshader 0 "glass" [
     @vpstart
+    PARAM campos = program.env[0];
+    ATTRIB normal = vertex.normal;
     MOV result.texcoord[0], vertex.texcoord[0];
-    SUB result.texcoord[1], program.env[0], vertex.position;
-    
-    TEMP absnormal;
-    ABS absnormal, vertex.normal;
-
-    MOV result.texcoord[2].x, absnormal.y;
-    MOV result.texcoord[2].y, -absnormal.z;
-    MOV result.texcoord[2].z, vertex.normal.x;
-
-    MOV result.texcoord[3].x, absnormal.z;
-    MOV result.texcoord[3].y, -absnormal.x;
-    MOV result.texcoord[3].z, vertex.normal.y;
-
-    MOV result.texcoord[4].x, absnormal.x;
-    MOV result.texcoord[4].y, -absnormal.y;
-    MOV result.texcoord[4].z, vertex.normal.z;
-
+    SUB result.texcoord[1], campos, opos;
+    MOV result.texcoord[2], normal;
     MOV result.color, vertex.color;
     @fogcoord
-    END
-] [
+    END 
+] [ 
     @fpstart
-    OPTION ARB_fog_linear;
+    ATTRIB rvec = fragment.texcoord[0];
+    ATTRIB camvec = fragment.texcoord[1];
+    ATTRIB normal = fragment.texcoord[2];
 
-    TEMP diffuse, dudv;
-    TEX diffuse, fragment.texcoord[0], texture[0], 2D;
-    MAD dudv, diffuse, 0.2, fragment.texcoord[0];
-    ADD dudv, dudv, program.env[1];
-    TEX dudv, dudv, texture[2], 2D;
-    MAD dudv, dudv, 0.1, fragment.texcoord[0];
+    TEMP reflect;
+    TEX reflect, rvec, texture[0], CUBE;
+    
+    TEMP invfresnel;
+    @(normalize invfresnel camvec)
+    DP3 invfresnel, invfresnel, normal;
+    MAX invfresnel, invfresnel, 0.70;
 
-    TEMP normal, wnormal;
-    TEX normal, dudv, texture[1], 2D;
-    MAD normal, normal, 2, -1;
-    DP3 wnormal.x, normal, fragment.texcoord[2];
-    DP3 wnormal.y, normal, fragment.texcoord[3];
-    DP3 wnormal.z, normal, fragment.texcoord[4];
-
-    TEMP cam, rvec, reflect;
-    @(normalize cam fragment.texcoord[1])
-    DP3 rvec, wnormal, cam;
-    MUL rvec, rvec, wnormal;
-    MAD rvec, rvec, 2, -cam;
-    TEX reflect, rvec, texture[0], 2D;
-    MAD result.color.a, diffuse.r, 1.0, 0.01;
-    LRP result.color.rgb, diffuse, fragment.color, reflect;
-
+    TEMP col;
+    MUL col, fragment.color, 0.05;
+    LRP col.rgb, invfresnel, col, reflect;
+    MUL col.a, invfresnel, 0.95;
+ 
+    @(rgbafog col "{0, 0, 0, 1}")
     END
 ]
+lazyshader 0 "glassfast" [
+    @vpstart
+    MOV result.texcoord[0], vertex.texcoord[0];
+    MOV result.color, vertex.color;
+    @fogcoord
+    END 
+] [ 
+    @fpstart
+    ATTRIB rvec = fragment.texcoord[0];
 
+    TEMP reflect;
+    TEX reflect, rvec, texture[0], CUBE;
+    
+    PARAM invfresnel = 0.75;
+    TEMP col;
+    MUL col, fragment.color, 0.05;
+    LRP col.rgb, invfresnel, col, reflect;
+    MUL col.a, invfresnel, 0.95;
+
+    @(rgbafog col "{0, 0, 0, 1}")
+    END
+]
+fastshader glass glassfast 2
+altshader glass glassfast
 
 lazyshader 0 "grass" [
     @vpstart
