retooled citadel a bit
Former-commit-id: 3b71cd01fd583e03d2b62580aa906ebe876385c6

--- a/data/maps/citadel.cfg
+++ b/data/maps/citadel.cfg
@@ -3,14 +3,13 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
@@ -22,12 +21,11 @@
 // cloudscrollx 0.01
 // cloudscrolly -0.001
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
@@ -35,10 +33,9 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-gravity 50
-impulsemod 60
-impulsespeed 30
+// gravity 50.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -51,22 +48,19 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 48
-// liquiddampen 0.5
-// liquidfric 10.0
-// liquidscale 0.9
+// liquidcurb 10.0
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Citadel by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-movespeed 40
-numplayers 8
-// numteamplayers 8
+// movespeed 40.0
+// numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
-skybox "<mad:0.5/0.5/0.5>skyboxes/stars"
+// skybox "<mad:0.5/0.5/0.5>skyboxes/stars"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
@@ -75,7 +69,7 @@ skybox "<mad:0.5/0.5/0.5>skyboxes/stars"
 // spinsky 0.2
 // stairheight 4.1
 // stepspeed 1.0
-// vertwater 1
+// vertwater 0
 // wallz 0.2
 // watercolour 0x103060
 // waterfallcolour 0x000000
@@ -104,7 +98,7 @@ setshader stdworld
 texture c "acord/water.jpg" 0 0 0 1.000000 // 1
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.25/0.75/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 2
+texture c "<mad:0.75/0.125/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 2
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
@@ -116,7 +110,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 4
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 4
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
