--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -119,7 +119,7 @@ bind K				[ kill ]
 
 bind TAB			[ showscores ]
 
-saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/conopen")]
+saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/conopen"]
 sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/" (getteamicon))]
 
 bind T				saytextcommand
