--- a/data/models/actors/player/md5.cfg
+++ b/data/models/actors/player/md5.cfg
@@ -2,7 +2,7 @@ md5load trooper.md5mesh player
 exec "data/models/actors/player/ragdoll.cfg"
 
 md5tag Weapon tag_weapon
-md5tag waist tag_flag
+md5tag waist tag_affinity
 
 md5skin mesh "<dds>skin.png" "<dds>mask.png"
 md5bumpmap mesh "<dds>normals.png"
