--- a/data/maps/enigma.cfg
+++ b/data/maps/enigma.cfg
@@ -52,7 +52,7 @@
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-maptitle "Enigma by Jonathan 'W!CK3D' Roels"
+// maptitle "Enigma by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
 // movespeed 40.0
