map Tranquility : Set numplayers on 24 to feet better the map size
Former-commit-id: 33fbd40feed95fdb192722a5ea851e0f91271531

--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -3,7 +3,7 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
@@ -25,8 +25,7 @@
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
@@ -49,7 +48,7 @@
 // lighterror 8
 // lightlod 0
 // lightprecision 60
-// liquidfric 10.0
+// liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
@@ -57,11 +56,10 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 40.0
-// numplayers 4
+// numplayers 24
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
 // skybox "acord/sky6"
 // skylight 0x000000
 // skytexture 1
