--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -81,6 +81,11 @@
 // yawclouds 0
 // yawsky 0
 
+"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
+"bloodground_intro" = [
+	echo (format "BRING THE NEUTRAL FLAGS AROUND THE MAP TO THE CAPTURE POINT IN THE MIDDLE, GOOD LUCK AND HAVE FUN.")
+]
+
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
 texture 1 "textures/watern.jpg"
