added/updated/colourified map intros
Former-commit-id: a94462399edaaf329032ce7a3201f10581ea11d4

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -82,7 +82,7 @@
 // yawsky 0
 
 "bloodground_intro" = [
-	echo (format "BRING THE NEUTRAL FLAGS AROUND THE MAP TO THE CAPTURE POINT IN THE MIDDLE, GOOD LUCK AND HAVE FUN.")
+	echo "^fgIMPORTANT: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
 
