--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -83,6 +83,11 @@ skybox "skyboxes/stars"
 // yawclouds 0
 // yawsky 0
 
+"tower_intro" = [
+	echo "^fgIMPORTANT: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
+]
+"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ tower_intro ] ] ]
+
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
 texture 1 "textures/watern.jpg"
