added new map 'forge' to rotation, shifted some files about for consistency
Former-commit-id: e0793cae585ae303c91dd963e619ffb469a03438

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -379,8 +379,8 @@ mmodel "acord/light3off"
 mmodel "acord/light4on"
 mmodel "acord/light4off"
 
-mapsound "sounds/sfx/jumppad" 255 "air" -1 -1
-mapsound "sounds/sfx/teleport" 255 "air" -1 -1
+mapsound "sounds/ambience/jumppad" 255 "air" -1 -1
+mapsound "sounds/ambience/teleport" 255 "air" -1 -1
 mapsound "sounds/ambience/alienwind" 255 "air" -1 -1
 mapsound "sounds/ambience/blowwind" 255 "air" -1 -1
 mapsound "sounds/ambience/cavedrip" 255 "air" -1 -1
