--- a/data/sounds/ambience/package.cfg
+++ b/data/sounds/ambience/package.cfg
@@ -1,5 +1,3 @@
-mapsound "sounds/sfx/jumppad" 255 "air"
-mapsound "sounds/sfx/teleport" 255 "air"
 mapsound "sounds/ambience/alienwind" 255 "air"
 mapsound "sounds/ambience/blowwind" 255 "air"
 mapsound "sounds/ambience/cavedrip" 255 "air"
@@ -16,6 +14,8 @@ mapsound "sounds/ambience/forestflies" 255 "air"
 mapsound "sounds/ambience/frogs" 255 "air"
 mapsound "sounds/ambience/hollowwind" 255 "air"
 mapsound "sounds/ambience/hum" 255 "air"
+mapsound "sounds/ambience/jumppad" 255 "air"
+mapsound "sounds/ambience/jumppad2" 255 "air"
 mapsound "sounds/ambience/lava1" 255 "air"
 mapsound "sounds/ambience/lava2" 255 "air"
 mapsound "sounds/ambience/lavarumble1" 255 "air"
@@ -23,7 +23,10 @@ mapsound "sounds/ambience/lavarumble2" 255 "air"
 mapsound "sounds/ambience/machine1" 255 "air"
 mapsound "sounds/ambience/machine2" 255 "air"
 mapsound "sounds/ambience/nightcrickets" 255 "air"
+mapsound "sounds/ambience/pneumatic" 255 "air"
 mapsound "sounds/ambience/river" 255 "air"
+mapsound "sounds/ambience/switch" 255 "air"
+mapsound "sounds/ambience/teleport" 255 "air"
 mapsound "sounds/ambience/wastewind" 255 "air"
 mapsound "sounds/ambience/water" 255 "air"
 mapsound "sounds/ambience/waterfall" 255 "air"
