--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -3021,9 +3021,9 @@ mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
 
-mapsound "sounds/sfx/pneumatic-door" 255 "air" -1 -1
-mapsound "sounds/sfx/jumppad" 255 "air" -1 -1
-mapsound "sounds/sfx/teleport" 255 "air" -1 -1
+mapsound "sounds/ambience/pneumatic" 255 "air" -1 -1
+mapsound "sounds/ambience/jumppad" 255 "air" -1 -1
+mapsound "sounds/ambience/teleport" 255 "air" -1 -1
 mapsound "sounds/ambience/alienwind" 255 "air" -1 -1
 mapsound "sounds/ambience/blowwind" 255 "air" -1 -1
 mapsound "sounds/ambience/cavedrip" 255 "air" -1 -1
