spelling/wording fixes
Former-commit-id: ed21eaf9b045fe350efdc3383df078453b76eea0

--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -84,7 +84,7 @@ skybox "skyboxes/stars"
 // yawsky 0
 
 "tower_intro" = [
-	echo "^fgIMPORTANT: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
+	echo "^fgIMISSION: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ tower_intro ] ] ]
 
