--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -82,7 +82,7 @@
 // yawsky 0
 
 "bloodground_intro" = [
-	echo "^fgIMPORTANT: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
+	echo "^fgMISSION: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
 
