--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -82,7 +82,7 @@
 // yawsky 0
 
 "bloodground_intro" = [
-	echo "^fgIMPORTANT: ^fyBring the ^faneutral ^fyflags in the center to the ennemie ^fybase on the opposite side."
+	echo "^fgMISSION: ^fycollect the ^faneutral ^fyflags in the center and take them to your base on the opposite side."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
 
