fix bug in ai ctf logic when bases and flags are separate entities
Former-commit-id: e730dfdda5e0cd9d50fd2b46b381a508bb89ffa3

--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -82,7 +82,7 @@
 // yawsky 0
 
 "bloodground_intro" = [
-	echo "^fgMISSION: ^fycollect the ^faneutral ^fyflags in the center and take them to your base on the opposite side."
+	echo "^fgMISSION: ^fycollect the ^faneutral ^fyflag in the center and take it to your base on the opposite side."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
 
