siege.bgz : fixed texture missing
Former-commit-id: ffaf183a35f2b057ab7e58a558b0d709893829f3

--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -3,7 +3,7 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
@@ -21,18 +21,21 @@
 // cloudscrollx 0.003
 // cloudscrolly 0.008
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 100000
 // fogcolour 0x8099B3
-gravity 50
-impulsemod 60
-impulsespeed 30
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// gravity 50.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -45,21 +48,18 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 48
-// liquiddampen 0.5
-// liquidfric 10.0
-// liquidscale 0.9
+// liquidcurb 10.0
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Siege by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-movespeed 40
-numplayers 14
-// numteamplayers 12
+// movespeed 40.0
+// numplayers 14
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 3.0
 // skybox "acord/sky7"
 // skylight 0x886644
 // skytexture 1
@@ -98,10 +98,10 @@ texture s "acord/null.jpg"
 texture z "acord/null.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/asphalt.jpg" 0 0 0 0.500000 // 1
-texture n "acord/asphaltn.jpg"
-texture s "acord/asphalts.jpg"
-texture z "acord/asphaltz.jpg"
+texture c "acord/asphalt3.jpg" 0 0 0 0.500000 // 1
+texture n "acord/asphalt3n.jpg"
+texture s "acord/asphalt3s.jpg"
+texture z "acord/asphalt3z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/barlighta.jpg" 0 0 0 0.500000 // 2
@@ -397,10 +397,40 @@ mmodel "acord/roundgrate"
 mmodel "acord/ring"
 mmodel "acord/jumppad"
 
-mapsound "sfx/jumppad" 255 "air" -1 -1
-mapsound "ambience/wastewind" 255 "air" -1 -1
-mapsound "ambience/hollowwind" 255 "air" -1 -1
-mapsound "ambience/machine1" 255 "air" -1 -1
-mapsound "ambience/water" 255 "air" -1 -1
-mapsound "ambience/waterfall" 255 "air" -1 -1
+mapsound "sounds/ambience/jumppad" 255 "air" -1 -1
+mapsound "sounds/ambience/teleport" 255 "air" -1 -1
+mapsound "sounds/ambience/alienwind" 255 "air" -1 -1
+mapsound "sounds/ambience/blowwind" 255 "air" -1 -1
+mapsound "sounds/ambience/cavedrip" 255 "air" -1 -1
+mapsound "sounds/ambience/creek" 255 "air" -1 -1
+mapsound "sounds/ambience/cycadas" 255 "air" -1 -1
+mapsound "sounds/ambience/distant_cars" 255 "air" -1 -1
+mapsound "sounds/ambience/dizzywind" 255 "air" -1 -1
+mapsound "sounds/ambience/electro" 255 "air" -1 -1
+mapsound "sounds/ambience/firelight" 255 "air" -1 -1
+mapsound "sounds/ambience/forest1" 255 "air" -1 -1
+mapsound "sounds/ambience/forest2" 255 "air" -1 -1
+mapsound "sounds/ambience/forest3" 255 "air" -1 -1
+mapsound "sounds/ambience/forestflies" 255 "air" -1 -1
+mapsound "sounds/ambience/frogs" 255 "air" -1 -1
+mapsound "sounds/ambience/hollowwind" 255 "air" -1 -1
+mapsound "sounds/ambience/hum" 255 "air" -1 -1
+mapsound "sounds/ambience/lava1" 255 "air" -1 -1
+mapsound "sounds/ambience/lava2" 255 "air" -1 -1
+mapsound "sounds/ambience/lavarumble1" 255 "air" -1 -1
+mapsound "sounds/ambience/lavarumble2" 255 "air" -1 -1
+mapsound "sounds/ambience/machine1" 255 "air" -1 -1
+mapsound "sounds/ambience/machine2" 255 "air" -1 -1
+mapsound "sounds/ambience/nightcrickets" 255 "air" -1 -1
+mapsound "sounds/ambience/river" 255 "air" -1 -1
+mapsound "sounds/ambience/wastewind" 255 "air" -1 -1
+mapsound "sounds/ambience/water" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall2" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall3" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall_deep" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall_huge" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall_indoor" 255 "air" -1 -1
+mapsound "sounds/ambience/waterfall_medium" 255 "air" -1 -1
+mapsound "sounds/ambience/wind" 255 "air" -1 -1
 
