--- a/data/map.cfg
+++ b/data/map.cfg
@@ -60,5 +60,6 @@ texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 exec "acord/package.cfg"
 exec "mitaman/package.cfg"
 exec "luckystrike/package.cfg"
+exec "kurt/package.cfg"
 exec "models/acord/package.cfg"
 exec "sounds/ambience/package.cfg"
